--- a/src/app/gifts/components/gift-list/gift-list.component.html
+++ b/src/app/gifts/components/gift-list/gift-list.component.html
@@ -2,6 +2,6 @@
 
 <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
   @for(gif of gifs(); track gif){
-    <gift-list-item [imageUrl]="gif"/>
+    <gift-list-item [imageUrl]="gif.url"/>
   }
 </div>
