--- a/src/app/gifts/pages/trending-page/trending-page.component.html
+++ b/src/app/gifts/pages/trending-page/trending-page.component.html
@@ -1,3 +1,13 @@
-<section class="py-5">
-  <gift-list [gifs]="giftService.trendingGifts()"></gift-list>
-</section>
+<div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+  @for(group of giftService.trendingGifsGroups(); track $index) {
+    <div class="grid gap-4">
+      @for(gif of group; track gif.id){
+        <div>
+            <img class="h-full w-full rounded-lg object-cover"
+            [src]="gif.url"
+            [alt]="gif.title">
+        </div>
+      }
+    </div>
+  }
+</div>
