--- a/src/app/gifts/pages/trending-page/trending-page.component.html
+++ b/src/app/gifts/pages/trending-page/trending-page.component.html
@@ -1,4 +1,8 @@
-<div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+<div
+  class="h-screen overflow-y-scroll grid grid-cols-2 md:grid-cols-4 gap-4 pt-5"
+  (scroll)="onScroll($event)"
+  #groupDiv
+>
   @for(group of giftService.trendingGifsGroups(); track $index) {
     <div class="grid gap-4">
       @for(gif of group; track gif.id){
